# Subdiv-Fitting-Tests

data/meshes/: Body_Mesh_Rigged.mtl
source/: 2D_example_projective.cpp  2D_example_projective.h  2D_model_fitting.cpp  2D_model_fitting.h  3D_model_fitting.cpp  3D_model_fitting.h  3D_model_fitting_io.cpp  3D_model_fitting_segmentation.cpp  3D_model_fitting_solvers.cpp  3D_model_fitting_visualization.cpp  3D_model_tracking.cpp  CMakeLists.txt  KinectFusion_datatest.cpp  KinectFusion_datatest.h  face_transition_tests_2D.cpp  face_transition_tests_2D.h  face_transition_tests_3D.cpp  face_transition_tests_3D.h  jacobian_comparison.cpp  jacobian_comparison.h  main_2D_example_projective.cpp  main_2D_model_fitting.cpp  main_3D_model_fitting.cpp  main_3D_model_tracking.cpp  main_3D_model_tracking_trans.cpp  main_KinectFusion_datatest.cpp  main_SK_paper_figure.cpp  main_face_transition_tests_2D.cpp  main_face_transition_tests_3D.cpp  main_image_capturer.cpp  main_jacobian_comparison.cpp  main_mesh_smoothing.cpp  main_test_background_sphere.cpp  main_test_eigen_sparse.cpp  main_test_regularization_integral.cpp  main_uShape_test.cpp  mesh_smoothing.cpp  mesh_smoothing.h  test_background_sphere.cpp  test_background_sphere.h  (+4 more)
